--- a/views/shop/movie.ejs
+++ b/views/shop/movie.ejs
@@ -49,6 +49,7 @@
                 <% } %>
                 <p><span style="color: #e91787;">Category</span> : <%= product.type %></p>
             <p><%= product.description %></p>
+            <p><%= data %></p>
             
         </main>
         
