--- a/views/shop/movie.ejs
+++ b/views/shop/movie.ejs
@@ -61,6 +61,12 @@
                 <% } else { %>
                     <h1>No Products Found!</h1>
                     <% } %>
+             <% if (similarDocuments.length > 0) { %>
+                
+                    <% for (let product2 of similarDocuments) { %>
+                      <p style="text-align: left;"><%= product2.id %>       <%= product2.score %></p>
+                       -%>
+                    <% } %>
         </main>
         
         <%- include('../includes/end.ejs') %>
