--- a/views/shop/movie.ejs
+++ b/views/shop/movie.ejs
@@ -63,10 +63,12 @@
                     <% } %>
              <% if (similarDocuments.length > 0) { %>
                 
-                    <% for (let product2 of similarDocuments) { %>
-                      <p style="text-align: left;"><%= product2.id %>       <%= product2.score %></p>
-                
-                    <% } %>
+                        <% for (let product2 of similarDocuments) { %>
+                          <p style="text-align: left;"><%= product2.id %>       <%= product2.score %></p>
+                        <% } %>
+                        <% } else { %>
+                            <h1>No Products Found!</h1>
+                            <% } %>
         </main>
         
         <%- include('../includes/end.ejs') %>
