--- a/views/shop/movie.ejs
+++ b/views/shop/movie.ejs
@@ -53,15 +53,15 @@
             <h2 style="color: #e91787;text-align: left;">Recommendation Movie from <%= product.title %>:</h2>
             <% if (data.length > 0) { %>
                 
-                    <% for (let product1 of data) { %>
-                      <p style="text-align: left;"><%= product1.title %></p>
-                       -%>
+                    <% for (let product of data) { %>
+                      <p style="text-align: left;"><%= product.title %></p>
+                       <!-- -%> -->
                     <% } %>
                 
                 <% } else { %>
                     <h1>No Products Found!</h1>
                     <% } %>
-             <% if (similarDocuments.length > 0) { %>
+                    <% if (similarDocuments.length > 0) { %>
                 
                         <% for (let product2 of similarDocuments) { %>
                           <p style="text-align: left;"><%= product2.id %>       <%= product2.score %></p>
