--- a/views/shop/movie.ejs
+++ b/views/shop/movie.ejs
@@ -64,7 +64,7 @@
                     <% if (similarDocuments.length > 0) { %>
                 
                         <% for (let product2 of similarDocuments) { %>
-                          <p style="text-align: left;"><%= product2.id %>       <%= product2.score %></p>
+                          <p style="text-align: left;"><%= product2.id %></p>
                         <% } %>
                         <% } else { %>
                             <h1>No Products Found!</h1>
