--- a/views/shop/movie.ejs
+++ b/views/shop/movie.ejs
@@ -49,13 +49,13 @@
                 <% } %>
                 <p><span style="color: #e91787;">Category</span> : <%= product.type %></p>
             <p><%= product.description %></p>
-            
+            <!-- <p><%= data %></p> -->
             <h2 style="color: #e91787;text-align: left;">Recommendation Movie from <%= product.title %>:</h2>
             <% if (data.length > 0) { %>
                 
                     <% for (let product1 of data) { %>
                       <p style="text-align: left;"><%= product1.title %></p>
-                       
+                       <!-- -%> -->
                     <% } %>
                 
                 <% } else { %>
@@ -64,7 +64,7 @@
                     <% if (similarDocuments.length > 0) { %>
                 
                         <% for (let product2 of similarDocuments) { %>
-                          <p style="text-align: left;"><%= product2.id %></p>
+                          <p style="text-align: left;"><%= product2.id %><%= product2.score %></p>
                         <% } %>
                         <% } else { %>
                             <h1>No Products Found!</h1>
